--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -35,7 +35,7 @@
         <h1 class="text-center">Disaster Response Project</h1>
         <p class="text-center">Analyzing message data for disaster response</p>
         <hr />
-      
+
         <div class="row">
             <div class="col-lg-12 form-group-lg">
                 <form action="/go" method="get">
@@ -45,6 +45,10 @@
                     </div>
                 </form>
             </div>
+
+
+
+
         </div>
 
         {% block message %}
@@ -53,16 +57,38 @@
 </div>
 
 <div class="container">
-    {% block content %}
-        <div class="page-header">
-            <h1 class="text-center">Overview of Training Dataset</h1>
-        </div>
-    {% endblock %}
 
-    {% for id in ids %}
-        <div id="{{id}}"></div>
-    {% endfor %}
-</div>
+  <div class="row">
+
+      <!--visualizations column-->
+      <div class="col-11">
+
+          <!--chart descriptions-->
+          <div id="middle-info" class="mt-3">
+
+              <h2 id="tag-line">My visualizations here</h2>
+              <h4 id="tag-line" class="text-muted">When I learn how to render them</h4>
+
+          </div>
+
+          <!--charts-->
+          <div id="charts" class="container mt-3 text-center">
+
+              <!--top two charts-->
+              <div class="row">
+                  <div class="col-6">
+                      <div id="{{ids[0]}}"></div>
+                  </div>
+                  <div class="col-6">
+                      <div id="{{ids[1]}}"></div>
+                  </div>
+              </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
 
 <script type="text/javascript">
     const graphs = {{graphJSON | safe}};
@@ -70,6 +96,7 @@
     for(let i in graphs) {
         Plotly.plot(ids[i], graphs[i].data, graphs[i].layout);
     }
+    
 </script>
 
 </body>
