--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://d14fo0winaifog.cloudfront.net/plotly-basic.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 
 <body>
@@ -58,34 +58,38 @@
 
 <div class="container">
 
-  <div class="row">
+  <!--chart descriptions-->
+  <div id="middle-info" class="mt-3">
 
-      <!--visualizations column-->
-      <div class="col-11">
+      <h2 id="tag-line">Insights from the training data</h2>
+      <h4 id="tag-line" class="text-muted">Take a peek, but then enter a query</h4>
 
-          <!--chart descriptions-->
-          <div id="middle-info" class="mt-3">
+  </div>
 
-              <h2 id="tag-line">My visualizations here</h2>
-              <h4 id="tag-line" class="text-muted">When I learn how to render them</h4>
 
-          </div>
+    </div>
 
-          <!--charts-->
-          <div id="charts" class="container mt-3 text-center">
+<div class="row">
 
-              <!--top two charts-->
-              <div class="row">
-                  <div class="col-6">
-                      <div id="{{ids[0]}}"></div>
-                  </div>
-                  <div class="col-6">
-                      <div id="{{ids[1]}}"></div>
-                  </div>
-              </div>
-          </div>
+    <!--visualizations column-->
+    <div class="col-11">
 
+
+
+        <!--charts-->
+        <div id="charts" class="container mt-3 text-center">
+
+            <!--top two charts-->
+            <div class="row">
+                <div class="col-6">
+                    <div id="{{ids[0]}}"></div>
+                </div>
+                <div class="col-6">
+                    <div id="{{ids[1]}}"></div>
+                </div>
+            </div>
         </div>
+
       </div>
     </div>
 
@@ -96,7 +100,7 @@
     for(let i in graphs) {
         Plotly.plot(ids[i], graphs[i].data, graphs[i].layout);
     }
-    
+
 </script>
 
 </body>
