--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -57,41 +57,15 @@
 </div>
 
 <div class="container">
-
-  <!--chart descriptions-->
-  <div id="middle-info" class="mt-3">
-
-      <h2 id="tag-line">Insights from the training data</h2>
-      <h4 id="tag-line" class="text-muted">Take a peek, but then enter a query</h4>
-
-  </div>
-
-
-    </div>
-
-<div class="row">
-
-    <!--visualizations column-->
-    <div class="col-11">
-
-
-
-        <!--charts-->
-        <div id="charts" class="container mt-3 text-center">
-
-            <!--top two charts-->
-            <div class="row">
-                <div class="col-6">
-                    <div id="{{ids[0]}}"></div>
-                </div>
-                <div class="col-6">
-                    <div id="{{ids[1]}}"></div>
-                </div>
-            </div>
+    {% block content %}
+        <div class="page-header">
+            <h1 class="text-center">Overview of Training and Test Dataset</h1>
         </div>
-
-      </div>
-    </div>
+    {% endblock %}
+    {% for id in ids %}
+        <div id="{{id}}"></div>
+    {% endfor %}
+</div>
 
 
 <script type="text/javascript">
